--- a/source/default/_data/imageStyles.yml
+++ b/source/default/_data/imageStyles.yml
@@ -1,15 +1,17 @@
 imageStyles:
   thumbnail:
-    width: 100
-    height: 100
-  card:
-    width: 318
+    width: 180
     height: 180
+  card:
+    width: 348
+    height: 233
+  medium:
+    width: 753
+    height: 293
+#    TODO: remove unused image sizes
   small:
     width: 400
     height: 400
-  medium:
-    width: 800
   carousel:
     width: 1110
     height: 400
