added fonts, types vars, created feature article card compontent

--- a/source/default/_patterns/02-molecules/featured-article-card/demo/featured-article-cards.yml
+++ b/source/default/_patterns/02-molecules/featured-article-card/demo/featured-article-cards.yml
@@ -1,1 +1,3 @@
-featured_article_card: ''
+featured_article_card:
+  title: "Duis laoreet nunc at luctus?"
+  summary: "Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. "
