--- a/apps/pl/pattern-lab/config/config.yml
+++ b/apps/pl/pattern-lab/config/config.yml
@@ -82,6 +82,7 @@ plugins:
           - ../../../source/default/_patterns/03-organisms/accordion
           - ../../../source/default/_patterns/03-organisms/article
           - ../../../source/default/_patterns/03-organisms/card-grid
+          - ../../../source/default/_patterns/03-organisms/featured-article-grid
           - ../../../source/default/_patterns/03-organisms/footer
           - ../../../source/default/_patterns/03-organisms/navbar
       templates:
