refactored colors to use more conventional names

--- a/source/default/_patterns/03-organisms/header/demo/headers.yml
+++ b/source/default/_patterns/03-organisms/header/demo/headers.yml
@@ -6,7 +6,7 @@ header:
       icon: "home"
       text: "Lorem"
     -
-      icon:  "bar-chart-o"
+      icon:  "chart-bar"
       text: "ipsum"
     -
       icon: "cog"
