WIP main article

--- a/apps/pl/pattern-lab/config/config.yml
+++ b/apps/pl/pattern-lab/config/config.yml
@@ -85,6 +85,7 @@ plugins:
           - ../../../source/default/_patterns/03-organisms/featured-article-grid
           - ../../../source/default/_patterns/03-organisms/footer
           - ../../../source/default/_patterns/03-organisms/header
+          - ../../../source/default/_patterns/03-organisms/main-article
           - ../../../source/default/_patterns/03-organisms/navbar
       templates:
         paths:
