--- a/source/default/_patterns/01-atoms/icon-button/demo/icon-buttons.yml
+++ b/source/default/_patterns/01-atoms/icon-button/demo/icon-buttons.yml
@@ -1,1 +1,10 @@
-icon_button: ''
+icon_button_rectangle:
+  text: "Aenean sit."
+  icon: "file"
+  color: "primary"
+  type: "rectangle"
+
+icon_button_circle:
+  icon: "file"
+  color: "dark"
+  type: "circle"
