--- a/apps/pl/pattern-lab/config/config.yml
+++ b/apps/pl/pattern-lab/config/config.yml
@@ -69,12 +69,14 @@ plugins:
       molecules:
         paths:
           - ../../../source/default/_patterns/02-molecules
+          - ../../../source/default/_patterns/02-molecules/banner
           - ../../../source/default/_patterns/02-molecules/card
           - ../../../source/default/_patterns/02-molecules/carousel
           - ../../../source/default/_patterns/02-molecules/featured-article-card
           - ../../../source/default/_patterns/02-molecules/jumbotron
           - ../../../source/default/_patterns/02-molecules/nav
           - ../../../source/default/_patterns/02-molecules/pagination
+          - ../../../source/default/_patterns/02-molecules/side-bar-card
       organisms:
         paths:
           - ../../../source/default/_patterns/03-organisms
