--- a/apps/pl/pattern-lab/config/config.yml
+++ b/apps/pl/pattern-lab/config/config.yml
@@ -77,6 +77,7 @@ plugins:
           - ../../../source/default/_patterns/02-molecules/nav
           - ../../../source/default/_patterns/02-molecules/pagination
           - ../../../source/default/_patterns/02-molecules/side-bar-card
+          - ../../../source/default/_patterns/02-molecules/side-bar-img-card
       organisms:
         paths:
           - ../../../source/default/_patterns/03-organisms
@@ -95,3 +96,6 @@ plugins:
       pages:
         paths:
           - ../../../source/default/_patterns/05-pages
+          - ../../../source/default/_patterns/05-pages/full-page-sidebar
+          - ../../../source/default/_patterns/05-pages/intro-page
+          - ../../../source/default/_patterns/05-pages/no-sidebar-page
