--- a/source/default/_patterns/02-molecules/banner/demo/banners.yml
+++ b/source/default/_patterns/02-molecules/banner/demo/banners.yml
@@ -1,6 +1,6 @@
 banner:
-  headline: "Nunc bibendum nisi a."
-  emphasis: "Etiam id."
-  subline: "Donec finibus facilisis eros. Nam."
+  headline: Nunc bibendum nisi a.
+  emphasis: Etiam id.
+  subline: Donec finibus facilisis eros. Nam.
 
 
