added images to current intro page

--- a/source/default/_patterns/02-molecules/banner/demo/banners.yml
+++ b/source/default/_patterns/02-molecules/banner/demo/banners.yml
@@ -2,5 +2,6 @@ banner:
   headline: Nunc bibendum nisi a.
   emphasis: Etiam id.
   subline: Donec finibus facilisis eros. Nam.
+  img: '../../../assets/cityline.jpg'
 
 
