--- a/source/default/_patterns/02-molecules/side-bar-img-card/demo/side-bar-img-cards.yml
+++ b/source/default/_patterns/02-molecules/side-bar-img-card/demo/side-bar-img-cards.yml
@@ -1,3 +1,8 @@
 side_bar_img_card:
   title: Quisque tempus metus.
   summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla. Integer vestibulum eu nulla non tempus. Nulla id ultricies libero. In hac habitasse platea dictumst. Cras posuere tortor diam, id laoreet augue vestibulum vel. Suspendisse at turpis eu lorem sollicitudin pretium. Suspendisse ullamcorper tortor tincidunt lacus ullamcorper, mollis tincidunt arcu hendrerit.
+  button:
+    text: Aenean sit.
+    color: primary
+    type: rectangle
+    icon: file
