--- a/source/default/_patterns/05-pages/intro-page/demo/intro-pages.yml
+++ b/source/default/_patterns/05-pages/intro-page/demo/intro-pages.yml
@@ -1,24 +1,4 @@
 intro_page:
-#  header:
-#    title: Strongly Typed
-#    eyebrow: A RESPONSIVE HTML5 SITE TEMPLATE. MANUFACTURED BY HTML5 UP.
-#    navbar:
-#      -
-#        icon: home
-#        text: Introduction
-#      -
-#        icon:  chart-bar
-#        text: Dropdown
-#      -
-#        icon: cog
-#        text: Left Sidebar
-#      -
-#        icon: retweet
-#        text: Right Sidebar
-#      -
-#        icon: sitemap
-#        text: No Sidebar
-
   featured_article_grid:
     headline: Gentlemen, Behold! This is Strongly Typed!
     button_text: Tell me more
@@ -77,20 +57,18 @@ intro_page:
       -
         date: July 30
         title: Just Another Post
-        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non libero vel urna congue placerat. Nulla gravida egestas finibus. Quisque mi velit, tempor nec lectus a, tristique efficitur purus. Etiam tincidunt lacus at convallis laoreet. Nam non eleifend elit, congue fermentum purus. Pellentesque volutpat enim at dui feugiat, in volutpat magna tincidunt.
-      -
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non libero vel urna congue placerat.
         date: July 28
         title: And Another Post
-        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non libero vel urna congue placerat. Nulla gravida egestas finibus. Quisque mi velit, tempor nec lectus a, tristique efficitur purus. Etiam tincidunt lacus at convallis laoreet. Nam non eleifend elit, congue fermentum purus. Pellentesque volutpat enim at dui feugiat, in volutpat magna tincidunt.
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non libero vel urna congue placerat.
       -
         date: July 24
         title: One More Post.
-        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra quis enim non sollicitudin. Etiam in elementum massa. Donec facilisis ac odio porttitor cursus. Integer suscipit pretium auctor. Duis nec auctor dui, at feugiat arcu. Cras pulvinar hendrerit dolor quis facilisis. In ultricies dapibus hendrerit. Vestibulum leo ipsum, tincidunt id tellus et, accumsan malesuada risus. Nunc quis massa in tortor ornare aliquam quis et est. Proin id lectus non nisl dictum sollicitudin. Vestibulum molestie in lectus ut molestie.
-
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra quis enim non sollicitudin.
     img_cards:
       -
         title: Something of Note.
-        summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla. Integer vestibulum eu nulla non tempus. Nulla id ultricies libero. In hac habitasse platea dictumst. Cras posuere tortor diam, id laoreet augue vestibulum vel. Suspendisse at turpis eu lorem sollicitudin pretium. Suspendisse ullamcorper tortor tincidunt lacus ullamcorper, mollis tincidunt arcu hendrerit.
+        summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla.  Suspendisse ullamcorper tortor tincidunt lacus ullamcorper, mollis tincidunt arcu hendrerit. Maecenas faucibus posuere quam eu placerat. Morbi dui ligula, bibendum a lobortis lobortis, facilisis sed metus. Phasellus non convallis urna.
         img: "../../../assets/globe.jpg"
         button:
           text: Learn More.
@@ -99,64 +77,10 @@ intro_page:
           icon: file
       -
         title: Something of Less Note.
-        summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla. Integer vestibulum eu nulla non tempus. Nulla id ultricies libero. In hac habitasse platea dictumst. Cras posuere tortor diam, id laoreet augue vestibulum vel. Suspendisse at turpis eu lorem sollicitudin pretium. Suspendisse ullamcorper tortor tincidunt lacus ullamcorper, mollis tincidunt arcu hendrerit.
+        summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla. Integer vestibulum eu nulla non tempus. Nulla id ultricies libero. In hac habitasse platea dictumst. Cras posuere tortor diam, id laoreet augue vestibulum vel. Suspendisse at turpis eu lorem sollicitudin pretium. Suspendisse ullamcorper tortor tincidunt lacus ullamcorper, mollis tincidunt arcu hendrerit.   Etiam non nunc vel est suscipit convallis non id orci. Ut interdum tempus facilisis convallis. Etiam non nunc vel est suscipit convallis non id orci.
         img: "../../../assets/leaf.jpg"
         button:
           text: Learn More.
           color: primary
           type: rectangle
           icon: file
-  footer:
-      headline: Questions or Comments?
-      emphasis: Get in touch:
-      form:
-        name: Name
-        email: Email
-        message: Message
-      button:
-        text: Send Message
-        color: primary
-        type: rectangle
-        icon: envelope
-      summary: Erat lorem ipsum veroeros consequat magna tempus lorem ipsum consequat Phaselamet mollis tortor congue. Sed quis mauris sit amet magna accumsan tristique. Curabitur leo nibh, rutrum eu malesuada.
-      links:
-        -
-          icon: home
-          icon_type: s
-          text: 1234 Somewhere Road
-                 Nashville, TN 00000
-                 USA.
-        -
-          icon:  phone
-          icon_type: s
-          text: (000) 000-0000
-        -
-          icon: envelope
-          icon_type: s
-          text: info@untitled.tld
-        -
-          icon: twitter
-          icon_type: b
-          text: '@untitled'
-        -
-          icon: instagram
-          icon_type: b
-          text: instagram.com/untitled
-        -
-          icon: dribbble
-          icon_type: b
-          text: dribbble.com/untitled
-        -
-          icon: facebook
-          icon_type: b
-          text: facebook.com/untitled.
-      credits:
-        -
-          credit: © Untitled. All rights reserved.
-        -
-          credit: 'Design: HTML5 UP'
-        -
-          credit: 'Demo images: regularjane'
-
-
-
