added borders where needed to intro page

--- a/source/default/_patterns/03-organisms/main-article/demo/main-articles.yml
+++ b/source/default/_patterns/03-organisms/main-article/demo/main-articles.yml
@@ -1,6 +1,7 @@
 main_article:
   headline: Fusce elementum urna at quam congue, sed dictum.
   subline: Nam vehicula odio at.
+  border: top
   sections:
     -
       title: Curabitur eu tortor eratcras?
