--- a/source/default/_patterns/05-pages/full-page-sidebar/demo/full-page-sidebars.yml
+++ b/source/default/_patterns/05-pages/full-page-sidebar/demo/full-page-sidebars.yml
@@ -1,1 +1,47 @@
-full_page_sidebar: ''
+full_page_sidebar:
+ main_article:
+    headline: BEHOLD! THIS IS THE SIDEBAR LAYOUT!!
+    subline: Sidebar !!!!!!!
+    img: "../../../assets/journals.jpg"
+    sections:
+      -
+        title: LIGULA SUSPCIPIT FUSCE VEROEROS
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dapibus ac erat sit amet molestie. Curabitur vitae nunc a quam iaculis bibendum vitae a diam. Proin volutpat erat justo, et dignissim quam condimentum sit amet. Proin ut metus sed urna interdum elementum. Sed ut dictum arcu, eget convallis nisi. Nunc ullamcorper nisl non magna aliquet, vel ultricies eros dapibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Aliquam erat volutpat. Donec sit amet lectus lorem. Phasellus nec lobortis tortor, vel sagittis elit. Mauris egestas luctus auctor. Fusce nec neque eu felis consequat rhoncus.
+      -
+        title: Morbi congue ut ex et vehicula
+        summary: Prttitor pretium ut ut ante. Fusce vitae lobortis nunc. Nam sed sem quis mauris condimentum elementum vitae eget ex. Fusce tincidunt dui at nibh pretium rhoncus. Nam id hendrerit purus. Donec faucibus, nulla gravida dignissim vestibulum, orci elit tristique urna, ac aliquam libero leo ac nisi. Donec posuere tortor sed tincidunt elementum. Aenean elementum blandit mi sit amet venenatis. Maecenas semper laoreet massa, at ornare enim hendrerit at. Phasellus molestie dolor magna, at lacinia sem volutpat non. Mauris condimentum odio vitae sagittis laoreet. Integer eleifend enim non sagittis laoreet. Quisque justo mi, semper ac rhoncus at, molestie eu lacus.
+      -
+        title: Curabitur sollicitudin porta justo.
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam vitae mi vel dolor finibus accumsan vitae nec ligula. Integer eget augue sit amet lectus bibendum mollis. Mauris sit amet nisl in augue tempus lobortis eu sit amet massa. Aliquam erat volutpat. Aliquam a lorem non neque ultrices tempus. Sed odio nunc, dapibus at felis ac, consectetur dignissim ante. Phasellus est odio, viverra a justo ut, ultrices sagittis nisl. Nunc quis pellentesque tortor. Sed blandit lacus sit amet diam euismod, eget finibus tortor malesuada. Mauris non risus aliquam, eleifend nisl ac, vehicula enim. Fusce finibus orci at arcu volutpat, nec sollicitudin massa scelerisque. Nam sed arcu mattis, volutpat sem id, ultricies mi. Integer suscipit mauris sed tortor feugiat luctus non quis erat.
+ sidebar:
+    date_cards:
+      -
+        date: July 30
+        title: Just Another Post
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non libero vel urna congue placerat.
+        date: July 28
+        title: And Another Post
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. In non libero vel urna congue placerat.
+      -
+        date: July 24
+        title: One More Post.
+        summary: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc pharetra quis enim non sollicitudin.
+    img_cards:
+      -
+        title: Something of Note.
+        summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla.  
+        img: "../../../assets/globe.jpg"
+        button:
+          text: Learn More.
+          color: primary
+          type: rectangle
+          icon: file
+      -
+        title: Something of Less Note.
+        summary: Cras consequat, dolor in semper accumsan, lectus ipsum semper sem, ut pellentesque ex massa eget ante. Cras tincidunt fringilla fringilla.
+        img: "../../../assets/leaf.jpg"
+        button:
+          text: Learn More.
+          color: primary
+          type: rectangle
+          icon: file
